adding SVM to doc2vec method

--- a/models/Doc2Vec.ipynb
+++ b/models/Doc2Vec.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +57,12 @@
     "# model\n",
     "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
     "from sklearn.svm import LinearSVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "# metrics\n",
-    "from sklearn import metrics, model_selection\n",
+    "from sklearn import metrics, model_selection, svm\n",
     "import sklearn.metrics as metrics\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, plot_confusion_matrix, roc_curve, auc, classification_report\n",
-    "import pickle\n",
-    "# this may not work because of gensim problem?"
+    "import pickle"
    ]
   },
   {
@@ -297,36 +297,43 @@
   },
   {
    "source": [
-    "## Logisitic Regression\n",
-    "\n",
-    "We're using a Logisitic Regression model because it was the best performing baseline."
+    "## Baseline Models"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# train-test split\n",
     "y_train, X_train = vec_for_learning(dbow_model, tagged_train)\n",
     "y_test, X_test = vec_for_learning(dbow_model, tagged_test)"
    ]
   },
   {
+   "source": [
+    "## Logisitic Regression\n",
+    "\n",
+    "The Logisitic Regression baseline had the highest unweighted F1 score of 0.387805 with the Tf-IDF vectorization method."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
     "logreg = LogisticRegression(n_jobs=1, C=1e5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +344,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 25
     }
    ],
    "source": [
@@ -346,44 +353,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = logreg.predict(X_test)"
+    "logreg_y_preds = logreg.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logreg_precision = precision_score(y_test, logreg_y_preds)\n",
+    "logreg_recall = recall_score(y_test, logreg_y_preds)\n",
+    "logreg_f1_score = f1_score(y_test, logreg_y_preds)\n",
+    "logreg_f1_weighted = f1_score(y_test, logreg_y_preds, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Testing precision 0.4491525423728814\nTesting recall 0.12412177985948478\nTesting F1 score: 0.9248533027145003\n"
+      "Precision: 0.504\nRecall: 0.1475\nF1 Score: 0.2283\nWeighted F1 Score: 0.9276\n"
      ]
     }
    ],
    "source": [
-    "print('Testing precision %s' % precision_score(y_test, y_pred))\n",
-    "print('Testing recall %s' % recall_score(y_test, y_pred))\n",
-    "print('Testing F1 score: {}'.format(f1_score(y_test, y_pred, average='weighted')))\n",
-    "\n",
-    "# not having a weighted F1 brings the score down to .19"
+    "print('Precision: {:.4}'.format(logreg_precision))\n",
+    "print('Recall: {:.4}'.format(logreg_recall))\n",
+    "print('F1 Score: {:.4}'.format(logreg_f1_score))\n",
+    "print('Weighted F1 Score: {:.4}'.format(logreg_f1_weighted))\n"
    ]
   },
   {
    "source": [
-    "Looks like using Doc2Vec on a Logistic Regression model really bumped up the F1 score! We can try using this method on other models next."
+    "Looks like using Doc2Vec on a Logistic Regression model really lowers the F1 score, but it gets bumped up if we add the `weighted` parameter.\n",
+    "\n",
+    "Additionally, this method increased Precision but decreased Recall."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "According to the sk-learn documentation, a weighted F1 score calculates metrics for each label, and finds their average weighted by support (the number of true instances for each label). **This alters ‘macro’ to account for label imbalance;** it can result in an F-score that is not between precision and recall.\n",
+    "According to the scikit-learn documentation, a weighted F1 score calculates metrics for each label, and finds their average weighted by support (the number of true instances for each label). **This alters ‘macro’ to account for label imbalance;** it can result in an F-score that is not between precision and recall.\n",
     "\n"
    ],
    "cell_type": "markdown",
@@ -391,10 +411,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# creating dictionary with all metrics\n",
+    "metric_dict = {}\n",
+    "metric_dict['Baseline Logisitic Regression'] = {'precision': logreg_precision, 'recall': logreg_recall, 'f1_score': logreg_f1_score, 'weighted_f1': logreg_f1_weighted}"
+   ]
+  },
+  {
+   "source": [
+    "## Support Vector Machine (SVM)\n",
+    "The baseline SVM had the highest weighted F1 score of 0.938102 with the Tf-IDF vectorization method."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SVM_baseline = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "SVC(gamma='auto', kernel='linear')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
+   "source": [
+    "# fit the training dataset on the classifier\n",
+    "SVM_baseline.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predict the labels on validation dataset\n",
+    "SVM_y_preds = SVM_baseline.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SVM_precision = precision_score(y_test, SVM_y_preds)\n",
+    "SVM_recall = recall_score(y_test, SVM_y_preds)\n",
+    "SVM_f1_score = f1_score(y_test, SVM_y_preds)\n",
+    "SVM_f1_weighted = f1_score(y_test, SVM_y_preds, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Testing Metrics for SVM Baseline with Lemmatization Features\nPrecision: 1.0\nRecall: 0.002342\nF1 Score: 0.004673\nWeighted F1 Score: 0.915\n"
+     ]
+    }
+   ],
+   "source": [
+    "# printing evaluation metrics up to 4th decimal place\n",
+    "print('Testing Metrics for SVM Baseline with Lemmatization Features')\n",
+    "print('Precision: {:.4}'.format(SVM_precision))\n",
+    "print('Recall: {:.4}'.format(SVM_recall))\n",
+    "print('F1 Score: {:.4}'.format(SVM_f1_score))\n",
+    "print('Weighted F1 Score: {:.4}'.format(SVM_f1_weighted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metric_dict['Baseline SVM'] = {'precision': SVM_precision, 'recall': SVM_recall, 'f1_score': SVM_f1_score, 'weighted_f1': SVM_f1_weighted}"
+   ]
+  },
+  {
+   "source": [
+    "## Evaluation Metrics"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                               precision    recall  f1_score  weighted_f1\n",
+       "Baseline Logisitic Regression      0.504  0.147541  0.228261     0.927634\n",
+       "Baseline SVM                       1.000  0.002342  0.004673     0.915034"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>precision</th>\n      <th>recall</th>\n      <th>f1_score</th>\n      <th>weighted_f1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Baseline Logisitic Regression</th>\n      <td>0.504</td>\n      <td>0.147541</td>\n      <td>0.228261</td>\n      <td>0.927634</td>\n    </tr>\n    <tr>\n      <th>Baseline SVM</th>\n      <td>1.000</td>\n      <td>0.002342</td>\n      <td>0.004673</td>\n      <td>0.915034</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
+   "source": [
+    "pd.DataFrame.from_dict(metric_dict, orient='index')"
+   ]
+  },
+  {
+   "source": [
+    "Overall, the logisitic regression performs better than the SVM baseline. But that's just with the Doc2Vec Method. Turns out that a SVM baseline using Tf-IDF vectoriation performs slightly better with a weighted F1 of 0.938102.\n",
+    "\n",
+    "So we may consider going back a grid searching on the baseline SVM with TF-IDF vectorization instead."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
