Changing notebook headings

--- a/models/SVM.ipynb
+++ b/models/SVM.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "source": [
-    "# SVM Modeling"
+    "# Support Vector Machine (SVM) Modeling"
    ],
    "cell_type": "markdown",
    "metadata": {}
