--- a/models/logisitic_regression.ipynb
+++ b/models/logisitic_regression.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "source": [
-    "## Logisitic Regression Modeling"
+    "# Logisitic Regression Modeling"
    ],
    "cell_type": "markdown",
    "metadata": {}
