--- a/preprocessing/data_cleaning.ipynb
+++ b/preprocessing/data_cleaning.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "source": [
-    "# Data Cleaning Notebook\n",
+    "# Cleaning Raw Data\n",
     "\n",
     "This notebook contains **basic data cleaning steps that are not included in the NLP preprocessing procedure**. We will also be doing **EDA** on **non-corpus data** columns here.\n",
     "\n",
