--- a/preprocessing/hashtags.ipynb
+++ b/preprocessing/hashtags.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "source": [
-    "## EDA on Hashtags"
+    "# Corpus Hashtags"
    ],
    "cell_type": "markdown",
    "metadata": {}
