minor heading edit

--- a/preprocessing/nlp_preprocessing.ipynb
+++ b/preprocessing/nlp_preprocessing.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "source": [
-    "## Remove Stop Words & Tokenize\n",
+    "## Removing Stop Words in Tokenization\n",
     "We can use NLTK's built-in library of stop words to remove them in a tokenizing function."
    ],
    "cell_type": "markdown",
