--- a/preprocessing/VADER_sentiment.ipynb
+++ b/preprocessing/VADER_sentiment.ipynb
@@ -24,14 +24,9 @@
  "cells": [
   {
    "source": [
-    "# Sentiment Analysis with VADER"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "VADER (Valence Aware Dictionary and sEntiment Reasoner) is a lexicon and rule-based sentiment analysis tool that is specifically attuned to sentiments expressed in social media. \n",
+    "# Sentiment Analysis with VADER\n",
+    "\n",
+    "VADER (Valence Aware Dictionary and Sentiment Reasoner) is a lexicon and rule-based sentiment analysis tool that is specifically attuned to sentiments expressed in social media. \n",
     "\n",
     "It uses a combination of A sentiment lexicon is a list of lexical features (e.g., words) which are generally labelled according to their semantic orientation as either positive or negative.\n",
     "\n",
