adjusting TextBlob analysis text

--- a/preprocessing/TextBlob_sentiment.ipynb
+++ b/preprocessing/TextBlob_sentiment.ipynb
@@ -269,7 +269,7 @@
     }
    ],
    "source": [
-    "# creating dnsity plot for each label's polarity scores\n",
+    "# creating density plot for each label's polarity scores\n",
     "plt.figure(figsize=(12, 8))\n",
     "ax = sns.distplot(clean_df['polarity'][clean_df['label'] == 0], label='Not Hate Speech', color='green')\n",
     "ax = sns.distplot(clean_df['polarity'][clean_df['label'] == 1], label='Hate Speech', color='red')\n",
@@ -282,7 +282,7 @@
   },
   {
    "source": [
-    "### insert analysis here"
+    "From this denisty plot, we can see that a majoirty of tweets in both classifications rank a fairly neutral. This doesn't seem accurate, and could be attributated to TextBlob's inability to score social media sentiment."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -315,7 +315,7 @@
     }
    ],
    "source": [
-    "# creating dnsity plot for each label's subjectivity scores\n",
+    "# creating density plot for each label's subjectivity scores\n",
     "plt.figure(figsize=(12, 8))\n",
     "ax = sns.distplot(clean_df['subjectivity'][clean_df['label'] == 0], label='Not Hate Speech', color='purple')\n",
     "ax = sns.distplot(clean_df['subjectivity'][clean_df['label'] == 1], label='Hate Speech', color='blue')\n",
@@ -328,7 +328,7 @@
   },
   {
    "source": [
-    "### insert analysis here"
+    "Again, we can see that a majority of both types of tweets have a fairly neutral subjectivity. This doesnt seem accurate either."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -404,17 +404,16 @@
   },
   {
    "source": [
-    "^ try to go back and adjust padding around graph borders"
+    "## TextBlob's Scoring\n",
+    "\n",
+    "From these results, it seems that TextBlob isn't a reliable semtiment analysis tool for social media data, where the text is so non-sensical.\n",
+    "\n",
+    "With so much offensive language and hate speech, you would assume that the polarity and subjectivity scores should be much more skewed.\n",
+    "\n",
+    "We can try using `Vader`, which is a rule-based lexicon designed specifically for social media sentiments. That can be found in `VADER_sentiment.ipynb`. "
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
