--- a/models/logisitic_regression.ipynb
+++ b/models/logisitic_regression.ipynb
@@ -332,7 +332,8 @@
   },
   {
    "source": [
-    "## Baseline with SMOTE\n"
+    "## Baseline with SMOTE\n",
+    "Used to over-sample the minority class (hate speech)."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -438,18 +439,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Resampled dataset shape Counter({0: 18627, 1: 1151})\n"
-     ]
-    }
-   ],
    "source": [
     "from collections import Counter\n",
     "from imblearn.under_sampling import TomekLinks # doctest: +NORMALIZE_WHITESPACE\n",
@@ -457,11 +446,15 @@
     "tl = TomekLinks()\n",
     "tomek_X_train, tomek_y_train = tl.fit_resample(tfidf_data_train, y_train)\n",
     "print('Resampled dataset shape %s' % Counter(tomek_y_train))"
-   ]
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
    "source": [
-    "It only removed 48 values from the majority class"
+    "It only removed 48 values from the majority class."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -528,7 +521,7 @@
   },
   {
    "source": [
-    "### Metrics for all Baselines"
+    "### Metrics for All Baselines"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -689,7 +682,7 @@
   },
   {
    "source": [
-    "So this didn't really make a difference?"
+    "So this didn't really make a difference? This makes sense because there aren't many hyperparameters to tune with logistic regression."
    ],
    "cell_type": "markdown",
    "metadata": {}
